test/valid/56311_empty_array/empty_array.agu
-- Author: tcomp56311, João Vedor

let empty_array : Int[] = new Int[0|0]

let empty_matrix : Int[][] = new Int[] [0 | new Int [0 | 0]]

let _ : Unit = 
    print(empty_array);
    print(empty_matrix)
